Added Teacher Related Apis
