# docs/swagger/swagger.json
@@ -46,7 +46,59 @@
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "$ref": "#/definitions/api.StatusInfoResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
                             "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/createTeacherProfile": {
+            "post": {
+                "description": "To Create Teacher Profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Teacher"
+                ],
+                "summary": "Create Teacher Profile",
+                "parameters": [
+                    {
+                        "description": "It takes json as input",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/database.TeacherProfile"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.TeacherProfile"
                         }
                     },
                     "400": {
@@ -99,6 +151,56 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/database.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/getTeacherProfile/{user_id}": {
+            "post": {
+                "description": "To Retrieve Teacher Profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Teacher"
+                ],
+                "summary": "Retrieve Teacher Profile",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.TeacherProfile"
                         }
                     },
                     "400": {
@@ -326,6 +428,64 @@
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "api.StatusInfoResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "database.TeacherProfile": {
+            "type": "object",
+            "properties": {
+                "achievements": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "experience_years": {
+                    "type": "integer"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "interests": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "past_experiences": {
+                    "type": "string"
+                },
+                "qualifications": {
+                    "type": "string"
+                },
+                "skills": {
+                    "type": "string"
+                },
+                "specialization": {
+                    "type": "string"
+                },
+                "teacher_id": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
